--- a/GaiaProjectDjango/systemcore/templates/systemcore/colorcode_list.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/colorcode_list.html
@@ -9,7 +9,8 @@
 </div>
 <div class="container">
   <!-- Content here --> 
-  <a href="{% url 'systemcore:home' %}">Back to home</a>
+<button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{% url 'systemcore:home' %}'">Back to Home</button>
+<button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{% url 'systemcore:colorcode_create' %}'">Add New Colour Code</button>
 </div>
 <div class="container">
   <!-- Content here -->
