--- a/GaiaProjectDjango/systemcore/templates/systemcore/colorcode_list.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/colorcode_list.html
@@ -9,6 +9,10 @@
 </div>
 <div class="container">
   <!-- Content here --> 
+<form method="get" action="{% url 'systemcore:colorcode_list' %}" class="form-inline mb-3">
+    <input type="text" name="q" class="form-control mr-2" placeholder="Search by name, hex, or RGB" value="{{ request.GET.q }}">
+    <button type="submit" class="btn btn-secondary btn-sm">Search</button>
+  </form>
 <button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{% url 'systemcore:home' %}'">Back to Home</button>
 <button type="button" class="btn btn-primary btn-sm" onclick="window.location.href='{% url 'systemcore:colorcode_create' %}'">Add New Colour Code</button>
 </div>
