--- a/GaiaProjectDjango/systemcore/templates/systemcore/index.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/index.html
@@ -16,7 +16,7 @@
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
       </div>
     </div>
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'admin:index' %}">
     <img src="{% static 'systemcore/images/logo.png' %}" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
     </a>
   </div>
