Add RJ45 Pinout creation and listing functionality with templates

--- a/GaiaProjectDjango/systemcore/templates/systemcore/index.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/index.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="{% url 'systemcore:colorcode_list' %}">Color Table</a>
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link active" aria-current="page" href="{% url 'systemcore:rj45pinout_list' %}">RJ45 Pinout</a>
         <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
       </div>
