Add HTMX support and update RJ45 Pinout list template for improved display

--- a/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_list.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_list.html
@@ -8,7 +8,14 @@
 <div class="container">
   <ul>
     {% for pinout in pinouts %}
-      <li>{{ pinout.name }} - Pin {{ pinout.pin_number }}: {{ pinout.color_code }}</li>
+      <li>
+        <strong>{{ pinout.name }}</strong>
+        <ul>
+          {% for pin in pinout.pins.all %}
+            <li>Pin {{ pin.pin_number }}: {{ pin.color_code }}</li>
+          {% endfor %}
+        </ul>
+      </li>
     {% empty %}
       <li>No pinouts found.</li>
     {% endfor %}
