--- a/GaiaProjectDjango/systemcore/templates/systemcore/systemcore_base.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/systemcore_base.html
@@ -1,3 +1,4 @@
+{% load django_htmx %}
 {% load static %}
 <!doctype html>
 <html lang="en">
@@ -8,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'systemcore/styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/3paNdF+e4z5l5d5a5b5b5b5b5b5b5" crossorigin="anonymous">
+    {% htmx_script %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/v4-shims.min.css" integrity="sha384-1q8e" crossorigin="anonymous">
   </head>
   <body>
