--- a/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_detail.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_detail.html
@@ -7,6 +7,9 @@
 {% block content %}
 
 <div id="test-output"></div>
+<a href="{% url 'systemcore:rj45pinout_list' %}" class="btn btn-outline-primary mb-3">
+  <i class="fa fa-home"></i> Back to List
+</a>
 <div class="container my-4">
   <div class="row">
     <div class="col-lg-8 mx-auto">
@@ -14,6 +17,7 @@
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
           <h4 class="mb-0"><i class="fa fa-network-wired"></i> {{ pinout.name }}</h4>
           <div>
+            
             <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#editPinoutModal">
               <i class="fa fa-edit"></i> Edit
             </button>
