--- a/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_list.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/rj45pinout/rj45pinout_list.html
@@ -3,6 +3,9 @@
 
 {% block content %}
 <div class="container my-4">
+  <a href="{% url 'systemcore:home' %}" class="btn btn-outline-primary mb-3">
+  <i class="fa fa-home"></i> Home
+</a>
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>RJ45 Pinouts</h2>
     <a href="{% url 'systemcore:rj45pinout_bulk_create' %}" class="btn btn-primary">
