--- a/GaiaProjectDjango/systemcore/templates/systemcore/index.html
+++ b/GaiaProjectDjango/systemcore/templates/systemcore/index.html
@@ -10,7 +10,7 @@
     </button>
     <div class="collapse navbar-collapse" id="mainNavbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#">Suppliers</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'systemcore:supplier_list' %}">Suppliers</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Clients</a></li>
         <li class="nav-item dropdown">
